finished cart context

--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,8 @@
       href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
-    <title>React App</title>
+    <link rel="shortcut icon" href="./controle-de-video-game.png" type="image/png">
+    <title>Well Played</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
